--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
     <link rel="stylesheet" href="styles.css">
     <head>
-        <title>Group Selector</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <p>Click Me!</p>
-        <p>No, Click Me!</p>
+        <p class="yes">Click Me!</p>
+        <p class="no">No, Click Me!</p>
     </body>
 </html>
