changing p to button

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <p class="yes">Click Me!</p>
-        <p class="no">No, Click Me!</p>
+        <button class="yes">Click Me!</button>
+        <button class="no">No, Click Me!</button>
     </body>
 </html>
